src/test/ui/associated-types/defaults-cyclic-fail-2.stderr
error[E0271]: type mismatch resolving `<() as Tr>::B == _`
  --> $DIR/defaults-cyclic-fail-2.rs:12:6
   |
LL | impl Tr for () {}
   |      ^^ cyclic type of infinite size

error[E0271]: type mismatch resolving `<bool as Tr>::B == _`
  --> $DIR/defaults-cyclic-fail-2.rs:30:6
   |
LL | impl Tr for bool {
   |      ^^ cyclic type of infinite size

error[E0271]: type mismatch resolving `<usize as Tr>::B == _`
  --> $DIR/defaults-cyclic-fail-2.rs:37:6
   |
LL | impl Tr for usize {
   |      ^^ cyclic type of infinite size

error[E0271]: type mismatch resolving `<bool as Tr>::B == _`
  --> $DIR/defaults-cyclic-fail-2.rs:32:5
   |
LL |     type A = Box<Self::B>;
   |     ^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error[E0271]: type mismatch resolving `<usize as Tr>::A == _`
  --> $DIR/defaults-cyclic-fail-2.rs:39:5
   |
LL |     type B = &'static Self::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0271`.
